add empty state file if none exists

--- a/.github/workflows/apply_tofu.yml
+++ b/.github/workflows/apply_tofu.yml
@@ -46,6 +46,16 @@ jobs:
       run: |
         aws sts get-caller-identity >/dev/null && echo "✓ AWS accessible" || echo "✗ AWS not accessible"
 
+    - name: Ensure state file exists
+      run: |
+        echo "Checking for existing state file"
+        if ! aws s3api head-object --bucket ${{ secrets.TOFU_STATE_BUCKET_NAME }} --key ${{ github.event.repository.name }}/tofu.tfstate 2>/dev/null; then
+          echo "No state file found, creating empty state"
+          echo "{}" | aws s3 cp - s3://${{ secrets.TOFU_STATE_BUCKET_NAME }}/${{ github.event.repository.name }}/tofu.tfstate
+        else
+          echo "✓ State file exists"
+        fi
+
     - name: Do that OpenTofu that you do so well
       id: plan
       run: |
@@ -57,8 +67,6 @@ jobs:
           -backend-config="bucket=${{ secrets.TOFU_STATE_BUCKET_NAME }}" \
           -backend-config="region=${{ vars.AWS_REGION }}" \
           -backend-config="key=${{ github.event.repository.name }}/tofu.tfstate"
-        echo "Verifying backend configuration"
-        tofu state list >/dev/null && echo "✓ State backend configured and accessible" || (echo "✗ State backend not accessible" && exit 1)
         echo "Planning OpenTofu"
         tofu plan -input=false -out=tfplan | tee plan.txt
         echo "Showing OpenTofu plan"
