move config to pending dir to ensure plan file creation

--- a/.github/workflows/apply_tofu.yml
+++ b/.github/workflows/apply_tofu.yml
@@ -10,7 +10,7 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
   actions: write
 
 env:
@@ -46,16 +46,6 @@ jobs:
       run: |
         aws sts get-caller-identity >/dev/null && echo "✓ AWS accessible" || echo "✗ AWS not accessible"
 
-    - name: Ensure state file exists
-      run: |
-        echo "Checking for existing state file"
-        if ! aws s3api head-object --bucket ${{ secrets.TOFU_STATE_BUCKET_NAME }} --key ${{ github.event.repository.name }}/tofu.tfstate 2>/dev/null; then
-          echo "No state file found, creating empty state"
-          echo "{}" | aws s3 cp - s3://${{ secrets.TOFU_STATE_BUCKET_NAME }}/${{ github.event.repository.name }}/tofu.tfstate
-        else
-          echo "✓ State file exists"
-        fi
-
     - name: Do that OpenTofu that you do so well
       id: plan
       run: |
@@ -63,7 +53,8 @@ jobs:
         echo "Verifying S3 bucket access"
         aws s3 ls s3://${{ secrets.TOFU_STATE_BUCKET_NAME }} >/dev/null && echo "✓ S3 bucket accessible" || (echo "✗ S3 bucket not accessible" && exit 1)
         echo "Initializing OpenTofu"
-        tofu init -input=false \
+        tofu init \
+          -input=false \
           -backend-config="bucket=${{ secrets.TOFU_STATE_BUCKET_NAME }}" \
           -backend-config="region=${{ vars.AWS_REGION }}" \
           -backend-config="key=${{ github.event.repository.name }}/tofu.tfstate"
