--- a/.github/workflows/apply_tofu.yml
+++ b/.github/workflows/apply_tofu.yml
@@ -70,8 +70,10 @@ jobs:
       run: |
         cd tofu
         tofu show -json tfplan > tfplan.json
-        grep -q "No changes" plan.txt && echo "changes=false" >> $GITHUB_OUTPUT && exit 0
-        
+        if [grep -q "No changes" plan.txt]; then
+          echo "changes=false" >> $GITHUB_OUTPUT
+          exit 0
+        fi
         echo "changes=true" >> $GITHUB_OUTPUT
         # Further plan checks will be added here
         
