--- a/repos.yaml
+++ b/repos.yaml
@@ -1,6 +1,2 @@
-.github:
-  description: GitHub configuration
-evoteum.github.io:
-  description: Evoteum's website
-estate-reusable-workflows:
-  description: Reusable GitHub Actions workflows
+testy-mctestface:
+  description: "This is a test repo"
