--- a/repos.yaml
+++ b/repos.yaml
@@ -10,4 +10,4 @@ estate-reusable-workflows:
 evoteum.github.io:
   description: Evoteum's website
 testy-mctestface:
-  description: This is a test repo
+  description: This is a test repository
