--- a/.github/workflows/all-environments-tofu-apply.yml
+++ b/.github/workflows/all-environments-tofu-apply.yml
@@ -17,4 +17,4 @@ jobs:
     secrets: inherit
     with:
       fail-fast: false
-      environments: '["development"]'
+      environments: tofu/development
