disable test-mctestface issues

--- a/repos.yaml
+++ b/repos.yaml
@@ -11,3 +11,4 @@ evoteum.github.io:
   description: Evoteum's website
 testy-mctestface:
   description: This is a test repository
+  has_issues: false
