--- a/.github/workflows/tofu-test.yml
+++ b/.github/workflows/tofu-test.yml
@@ -58,4 +58,6 @@ jobs:
               -backend-config="region=${{ vars.AWS_REGION }}"
 
       - name: Show OpenTofu State List
-        run: tofu state list
+        run: |
+          cd tofu/development
+          tofu state list
