fix spelling of artefact, switch github_workflows to use config map

--- a/repos.yml
+++ b/repos.yml
@@ -14,10 +14,10 @@ estate-reusable-workflows:
 evoteum.github.io:
   description: Evoteum's website
 planzoco:
-  artifact_type: container
+  artefact_type: container
   description: Every question finds its best answer
 testy-mctestface:
-  artifact_type: container
+  artefact_type: container
   description: Sandbox for testing
   needs_tofu: true
 tofu-modules:
