--- a/repos.yml
+++ b/repos.yml
@@ -11,7 +11,7 @@ estate-config:
   description: Configuration for the estate
   needs_tofu: true
   tofu_build_schedule: "0 23 * * *"
-  environment_directories: tofu/development
+  environments: development
   needs_todo_to_issue: true
 estate-reusable-workflows:
   description: Reusable GitHub Actions workflows
