expand explanation, add cron trigger

--- a/.github/workflows/tofu-apply-all-environments.yml
+++ b/.github/workflows/tofu-apply-all-environments.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - "tofu/**"
       - repos.yml
+  schedule:
+    - cron: "0 23 * * *"  # Every day at 11 PM
 
 permissions:
   id-token: write
