set permissions to write-all

--- a/.github/workflows/update-repos-list.yml
+++ b/.github/workflows/update-repos-list.yml
@@ -6,12 +6,7 @@ on:
     paths:
       - "repos.yml"
 
-permissions:
-  id-token: write
-  contents: write
-  actions: write
-  repository-projects: write
-
+permissions: write-all
 
 jobs:
   notify-profile:
