--- a/repos.yml
+++ b/repos.yml
@@ -22,6 +22,7 @@ planzoco:
   description: Every question finds its best answer
   homepage_url: "https://planzo.co"
   language: go
+  language_version: 1.21
   needs_auto_docs: true
   needs_tofu: true
   source_path: go/planzoco
