--- a/repos.yml
+++ b/repos.yml
@@ -36,6 +36,7 @@ testy-mctestface:
   description: Sandbox for testing
   language: python
   language_version: 3.13.0
+  source_path: python
   needs_tofu: true
   needs_auto_docs : true
   fail_fast: false
