--- a/repos.yml
+++ b/repos.yml
@@ -45,3 +45,5 @@ tofu-modules:
 terraform-provider-cron-expression-descriptor:
   description: Terraform provider that converts cron expressions into human readable descriptions.
   needs_todo_to_issue: true
+apprunner-go-runtime-app:
+  Testing AWS App runner - clone of abhirockzz/apprunner-go-runtime-app
