--- a/repos.yml
+++ b/repos.yml
@@ -17,6 +17,7 @@ estate-reusable-workflows:
   description: Reusable GitHub Actions workflows
 evoteum.github.io:
   description: Evoteum's website
+  homepage_url: "https://evoteum.com"
 planzoco:
   artefact_type: container
   description: Every question finds its best answer
