--- a/repos.yml
+++ b/repos.yml
@@ -62,3 +62,5 @@ obsero:
   description: Because Every Detail Counts
 grimoire:
   description: The Opinionated Linter for GitHub Actions Workflows
+harvey:
+  description: GitHub Action that generates cryptographic timestamp proofs for your files, anchoring them on public blockchains for immutable evidence of creation.
