--- a/repos.yml
+++ b/repos.yml
@@ -67,3 +67,7 @@ harvey:
   description: GitHub Action that generates cryptographic timestamp proofs for your files, anchoring them on public blockchains for immutable evidence of creation.
 estate-policy:
   description: Policies for enforcing organisation-wide guardrails
+ej:
+  description: Simple Linux & Mac CLI tool to standardise Engineering Journal entries.
+kubernetes-lab:
+  description: Our Kubernetes Lab
