--- a/repos.yml
+++ b/repos.yml
@@ -73,4 +73,4 @@ kubernetes-lab:
   description: Our Kubernetes Lab
 ubuntu-image-builder:
   description: Builds custom Ubuntu images with ubuntu-image and Python tooling
-  artefact_type: container
+  archived: true
