--- a/repos.yml
+++ b/repos.yml
@@ -84,4 +84,4 @@ kubernetes-lab-services:
   description: Services that run in the lab
 tocgen:
   description: Generate Table of Contents for Markdown files
-
+  artefact_type: container
